k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edupplan-backend-service
  namespace: edupplan
spec:
  type: ClusterIP
  selector:
    app: edupplan-backend
  ports:
    - name: http
      port: 8000        # port vu par les autres services/pods
      targetPort: 8000  # port dans le container
